less white space

--- a/notes/cheat-sheets/theory-of-computation.tex
+++ b/notes/cheat-sheets/theory-of-computation.tex
@@ -12,11 +12,13 @@
 \usepackage{cleveref}
 \usepackage{multicol}
 \usepackage{tikz}
+\usepackage[compact]{titlesec}
 \usepackage{pgfplots}
 \usepackage{lipsum}
 
 \setlength{\textheight}{8in}
 \setlength{\textwidth}{10.5in}
+\setlist{nosep}
 
 \hypersetup{
 	colorlinks=true,
