--- a/notes/courses/real-analysis/notes.mkd
+++ b/notes/courses/real-analysis/notes.mkd
@@ -335,3 +335,24 @@ The _greatest lower bound_, or _infinum_, of a set $A$ is denoted $\inf A$.
 Show that $\inf A = -\sup(-A)$.
 
 The infinum exists if a set if _bounded below_.
+
+##### Consequences
+
+_Archimedean property:_ if $x, y \in \mathbb{R}$ and $x > 0$, then there exists $n \in \mathbb{N}$ such that $nx > y$.
+
+_Proof (by contradiction)._ Consider $A = \{nx : n \in \mathbb{N}\}$. If $A$ is bounded by $y$ (i.e. $nx < y$ for all $n$) then $A$ has a least upper bound $\alpha$ (by the least upper bound property). Then $\alpha - x$ is not an upper bound for $A$. Hence, $\alpha - x < mx$ for some $m \in \mathbb{N}$. Then $\alpha < (m + 1)x$. Thus $\alpha$ is not an upper bound for $A$, a contradiction! Therefore, if $x, y \in \mathbb{R}$ and $x > 0$, then there exists $n \in \mathbb{N}$ such that $nx > y$. QED.
+
+_Corollary._ If $x > 0$ then there exists $n \in \mathbb{N}$ such that $\frac{1}{n} < x$.
+
+_Theorem ($\mathbb{Q}$ is dense in $\mathbb{R}$)._ Between $x, y \in \mathbb{R}$, and $x < y$, there is a $q \in \mathbb{Q}$ such that $x < q < y$.
+
+_Proof._ Choose $n$ such that $\frac{1}{n} < y - x$ (by Archimedean property). Consider multiples of $\frac{1}{n}$. These are unbounded (by the Archimedean property). Choose the first multiple such that $\frac{m}{n} > x$. If $\frac{m}{n}$ is not less than $y$ then $\frac{m - 1}{n} < x$ and $\frac{m}{n} > y$, which implies $\frac{1}{n} > y - x$, a constradiction. So, $\frac{m}{n} < y$. QED.
+
+## Properties of Suprema
+
+a. $\gamma$ is an upper bound of some set $A$ if and only if $\sup A \leq \gamma$.
+b. For all $a \in A$, $a \leq \gamma$ if and only if $\sup A \leq \gamma$.
+c. If for all $a \in A$, $a < \gamma$ then $\sup A \leq \gamma$.
+d. If $\gamma < \sup A$ then there exists $a \in A$ such that $a > \gamma$ and $a \leq \sup A$.
+e. If $A \subset B$ then $\sup A \leq \sup B$.
+f. To show $\sup A = \sup B$, one strategy is to show for all $a \in A$, there exists $b \in B$ such that $a \leq b$, so $\sup A \leq \sup B$; similarly, show $\sup B \leq \sup A$.
