--- a/notes/courses/real-analysis/notes.mkd
+++ b/notes/courses/real-analysis/notes.mkd
@@ -333,7 +333,7 @@ _Proof (by contradiction)._ Consider $A = \{nx : n \in \mathbb{N}\}$. If $A$ is 
 
 _Corollary._ If $x > 0$ then there exists $n \in \mathbb{N}$ such that $\frac{1}{n} < x$.
 
-_Theorem ($\mathbb{Q}$ is dense in $\mathbb{R}$)._ Between $x, y \in \mathbb{R}$, and $x < y$, there is a $q \in \mathbb{Q}$ such that $x < q < y$.
+_Theorem_ ($\mathbb{Q}$ is dense in $\mathbb{R}$)_._ Between $x, y \in \mathbb{R}$, and $x < y$, there is a $q \in \mathbb{Q}$ such that $x < q < y$.
 
 _Proof._ Choose $n$ such that $\frac{1}{n} < y - x$ (by Archimedean property). Consider multiples of $\frac{1}{n}$. These are unbounded (by the Archimedean property). Choose the first multiple such that $\frac{m}{n} > x$. If $\frac{m}{n}$ is not less than $y$ then $\frac{m - 1}{n} < x$ and $\frac{m}{n} > y$, which implies $\frac{1}{n} > y - x$, a constradiction. So, $\frac{m}{n} < y$. QED.
 
