added way to split course into multiple posts

--- a/notes/courses/real-analysis/0-some-preliminaries.mkd
+++ b/notes/courses/real-analysis/0-some-preliminaries.mkd
@@ -1,8 +1,6 @@
 ---
 title: Real Analysis
-subtitle: |
-  These are my notes for the Real Analysis course taught by Francis Su (https://www.youtube.com/playlist?list=PL0E754696F72137EC) and the Understanding Analysis book written by Stephen Abbott (https://www.amazon.com/dp/1493927116/).
-part: 0
+subtitle: Some Preliminaries
 ---
 
 ## Sets
