--- a/notes/courses/real-analysis/2-bounds.mkd
+++ b/notes/courses/real-analysis/2-bounds.mkd
@@ -13,8 +13,8 @@ If there is an $\alpha \in S$ such that (1) $\alpha$ is an _upper bound_, and (2
 
 For example, let $S = \mathbb{Q}$.
 
-1. (Finite sets have a supremum) $E = \{\frac{1}{2}, 1, 2\}$. $\sup E = 2$ because all elements of $E$ is less than or equal to $2$ and if $\gamma < 2$ then $\gamma$ is not an upper bound for $E$.
-2. $E = \mathbb{Q}_{-}$, the negative rationals. $\sup E = 0$.
-3. $E = \mathbb{Q}$. $E$ is _unbounded above_, denoted $\sup E = +\infty$.
-4. $E = \{x : x^2 < 2\}$. $\sup E$ does not exist although $E$ is bounded. One such bound is $\frac{3}{2}$.
+(@) (Finite sets have a supremum) $E = \{\frac{1}{2}, 1, 2\}$. $\sup E = 2$ because all elements of $E$ is less than or equal to $2$ and if $\gamma < 2$ then $\gamma$ is not an upper bound for $E$.
+(@) $E = \mathbb{Q}_{-}$, the negative rationals. $\sup E = 0$.
+(@) $E = \mathbb{Q}$. $E$ is _unbounded above_, denoted $\sup E = +\infty$.
+(@) $E = \{x : x^2 < 2\}$. $\sup E$ does not exist although $E$ is bounded. One such bound is $\frac{3}{2}$.
 . To show $\sup A = \sup B$, one strategy is to show for all $a \in A$, there exists $b \in B$ such that $a \leq b$, so $\sup A \leq \sup B$; similarly, show $\sup B \leq \sup A$.
