--- a/notes/courses/real-analysis/3-real-numbers.mkd
+++ b/notes/courses/real-analysis/3-real-numbers.mkd
@@ -7,10 +7,6 @@ subtitle: Real Numbers
 
 _Theorem:_ $\mathbb{R}$ is an ordered field, with the _least upper bound property_, and $\mathbb{R}$ contains $\mathbb{Q}$ as a _subfield_.
 
-### The Least Upper Bound Property
-
-A set $S$ has the _least upper bound property_ (or satisfies the _completeness axiom_) if every nonempty subset of $S$ has an upper bound, also has least upper bound in $S$.
-
 ### Construction of $\mathbb{R}$
 
 Dedekind: A _cut_ $\alpha$ is a subset of $\mathbb{Q}$ satisfying
@@ -99,13 +95,11 @@ Consequence: the length "$\sqrt{2}$" can be thought of as $\sup\{1, 1.4, 1.41, 1
 
 More generally, $a^{\frac{1}{n}} := \sup\{r \in \mathbb{Q} : r^n < a\}$, i.e. roots exist.
 
-#### The Greatest Lower Bound
-
-The _greatest lower bound_, or _infinum_, of a set $A$ is denoted $\inf A$.
+### Greatest Lower Bounds in $\mathbb{R}$
 
 Show that $\inf A = -\sup(-A)$.
 
-The infinum exists if a set if _bounded below_.
+The infinum exists if a set is _bounded below_.
 
 ##### Consequences
 
@@ -118,12 +112,3 @@ _Corollary._ If $x > 0$ then there exists $n \in \mathbb{N}$ such that $\frac{1}
 _Theorem_ ($\mathbb{Q}$ is dense in $\mathbb{R}$)_._ Between $x, y \in \mathbb{R}$, and $x < y$, there is a $q \in \mathbb{Q}$ such that $x < q < y$.
 
 _Proof._ Choose $n$ such that $\frac{1}{n} < y - x$ (by Archimedean property). Consider multiples of $\frac{1}{n}$. These are unbounded (by the Archimedean property). Choose the first multiple such that $\frac{m}{n} > x$. If $\frac{m}{n}$ is not less than $y$ then $\frac{m - 1}{n} < x$ and $\frac{m}{n} > y$, which implies $\frac{1}{n} > y - x$, a constradiction. So, $\frac{m}{n} < y$. QED.
-
-## Properties of Suprema
-
-a. $\gamma$ is an upper bound of some set $A$ if and only if $\sup A \leq \gamma$.
-b. For all $a \in A$, $a \leq \gamma$ if and only if $\sup A \leq \gamma$.
-c. If for all $a \in A$, $a < \gamma$ then $\sup A \leq \gamma$.
-d. If $\gamma < \sup A$ then there exists $a \in A$ such that $a > \gamma$ and $a \leq \sup A$.
-e. If $A \subset B$ then $\sup A \leq \sup B$.
-f. To show $\sup A = \sup B$, one strategy is to show for all $a \in A$, there exists $b \in B$ such that $a \leq b$, so $\sup A \leq \sup B$; similarly, show $\sup B \leq \sup A$.
