--- a/notes/courses/real-analysis/3-real-numbers.mkd
+++ b/notes/courses/real-analysis/3-real-numbers.mkd
@@ -95,13 +95,13 @@ Consequence: the length "$\sqrt{2}$" can be thought of as $\sup\{1, 1.4, 1.41, 1
 
 More generally, $a^{\frac{1}{n}} := \sup\{r \in \mathbb{Q} : r^n < a\}$, i.e. roots exist.
 
-### Greatest Lower Bounds in $\mathbb{R}$
+#### Greatest Lower Bounds in $\mathbb{R}$
 
 Show that $\inf A = -\sup(-A)$.
 
 The infinum exists if a set is _bounded below_.
 
-##### Consequences
+#### Consequences
 
 _Archimedean property:_ if $x, y \in \mathbb{R}$ and $x > 0$, then there exists $n \in \mathbb{N}$ such that $nx > y$.
 
